refaktorering, rette på feil i swagger, benytte mer funksjonelle funksjoner
