# oppdragsinfo/src/main/kotlin/no/nav/sokos/oppdragsinfo/api/model/GjelderIdRequest.kt
@@ -1,9 +1,0 @@
-package no.nav.sokos.oppdragsinfo.api.model
-
-import kotlinx.serialization.Serializable
-
-@Serializable
-data class GjelderIdRequest(
-    val gjelderId: String,
-    val faggruppeKode: String? = null
-)
